# Fano-Labs

./: .gitattributes  .gitignore  README.md  TAURI_SETUP.md  TAURI_SUCCESS.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
backend/: .env.example  .env.production.example  nodemon.json  package-lock.json  package.json  server.ts  server.ts.bak  tsconfig.json
backend/routes/: generate.ts
backend/src/: index.ts
backend/src/providers/: ollama.ts  openai.ts
backend/src/routes/: api.ts
deploy/: DEPLOY_WEB.md  ecosystem.config.cjs  nginx.fano-labs.conf
frontend/: .env.production  .env.web.production.example
frontend/public/: index.html
frontend/src/: App.css  App.tsx  api.ts
frontend/src/components/: ChatPanel.css  ChatPanel.tsx  Editor.css  Editor.tsx  InlineSuggestions.tsx
frontend/src/features/backend/: BackendConnection.css  BackendConnection.tsx
frontend/src/features/editor/: EditorFeature.css  EditorFeature.tsx
frontend/src/features/editor/components/: EditorContainer.css  EditorContainer.tsx  EditorToolbar.css  EditorToolbar.tsx
frontend/src/features/editor/hooks/: useCodeGeneration.ts  useEditorState.ts  useModelSelection.ts
frontend/src/features/suggestions/: InlineSuggestions.tsx
scripts/: download-png-icon.js  generate-icons.js  generate-png-icon-simple.js  generate-png-icon.js  generate-valid-png.js  start-app.sh  start-backend.js  start-fanolabs.sh
shared/: types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json.bak2
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
